[gd_scene load_steps=2 format=2]

[ext_resource path="res://Offline/Menu.gd" type="Script" id=1]

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 380.0
margin_top = 220.0
margin_right = 580.0
margin_bottom = 320.0

[node name="UsernameInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_right = 200.0
margin_bottom = 24.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Username"

[node name="IPInput" type="LineEdit" parent="CenterContainer/VBoxContainer"]
margin_top = 28.0
margin_right = 200.0
margin_bottom = 52.0
rect_min_size = Vector2( 200, 0 )
placeholder_text = "Ip address"

[node name="ServerButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 56.0
margin_right = 200.0
margin_bottom = 76.0
rect_pivot_offset = Vector2( -1370, -530 )
text = "server"

[node name="ClientButton" type="Button" parent="CenterContainer/VBoxContainer"]
margin_top = 80.0
margin_right = 200.0
margin_bottom = 100.0
rect_pivot_offset = Vector2( -1370, -530 )
text = "client"

[node name="CenterContainer2" type="CenterContainer" parent="."]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -48.0

[node name="Label" type="Label" parent="CenterContainer2"]
margin_left = 411.0
margin_top = 17.0
margin_right = 549.0
margin_bottom = 31.0
text = "this is a warning label"
align = 1
valign = 1

[connection signal="pressed" from="CenterContainer/VBoxContainer/ServerButton" to="." method="_on_ServerButton_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/ClientButton" to="." method="_on_ClientButton_pressed"]
